trying to move about section further down on iphone 5s size screens and fix problem in contact section with divs, & add more space above footer on smaller screens

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -596,6 +596,10 @@ main #home {
   .logo {
     margin-top: 4px;
   }
+
+  footer {
+    margin-top: 100px;
+  }
 }
 
 /*# sourceMappingURL=styles.css.map */
